<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemInsert">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.296">

        <!--
        <EditText
            android:id="@+id/editText_who"
            android:layout_width="340dp"
            android:layout_height="83dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:width="320dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/who_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:text="@string/who"
            app:layout_constraintBottom_toTopOf="@+id/editText_where"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_what" />

        <EditText
            android:id="@+id/editText_where"
            android:layout_width="331dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:width="320dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/where_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:text="@string/where"
            app:layout_constraintBottom_toTopOf="@+id/editTextDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_who" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="123dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/when"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColorHint="#00838F"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_where" />

        <EditText
            android:id="@+id/editText_why"
            android:layout_width="315dp"
            android:layout_height="85dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:width="320dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/why_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:text="@string/why"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTime"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="132dp"
            android:layout_height="48dp"
            android:layout_marginEnd="4dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/when_time"
            android:inputType="time"
            android:minHeight="24dp"
            android:textColorHint="#00838F"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.807"
            app:layout_constraintStart_toEndOf="@+id/editTextDate" />
-->

        <TextView
            android:id="@+id/dateText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="42dp"
            android:layout_marginBottom="56dp"
            android:text="@string/textWhen"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dateButton"
            app:layout_constraintTop_toBottomOf="@+id/whenText"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/editText_what"
            android:layout_width="329dp"
            android:layout_height="77dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="16dp"
            android:width="320dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/what_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="60dp"
            android:textColor="#78909C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <Button
            android:id="@+id/whenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="32dp"
            android:text="@string/pick_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_what"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/whenText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="63dp"
            android:text="@string/textWhen"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/whenButton"
            app:layout_constraintTop_toBottomOf="@+id/editText_what" />

        <Button
            android:id="@+id/dateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="20dp"
            android:text="@string/dateButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/whenButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/addItemConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="104dp"
        android:text="@string/addItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>